Add prettier and PHP-CS-Fixer
